DuPont DevSB/src/objects/Metadata_Sync__c.object
<CustomObject>
    <description>Metadata Sync Object/Tab Records to allow for Sync connection between Copado Steps -&gt; Metadata Mapping Sheets</description>
    <fields>
        <fullName>Copado_Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Copado Deployment</label>
        <referenceTo>copado__Deployment__c</referenceTo>
        <relationshipLabel>Metadata Sync</relationshipLabel>
        <relationshipName>Metadata_Sync</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Metadata_Sync__c</fullName>
        <label>Last Metadata Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Master_Org__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box for the One DuPont Metadata Sync Record</inlineHelpText>
        <label>Master Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_Level__c</fullName>
        <label>Sync Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Metadata Sync</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Copado_Deployment__c</columns>
        <columns>Sync_Level__c</columns>
        <columns>Last_Metadata_Sync__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Metadata Sync Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metadata Sync</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>